--- a/bookstore/pyproject.toml
+++ b/bookstore/pyproject.toml
@@ -2,7 +2,7 @@
 name = "bookstore"
 version = "0.1.0"
 description = "Bookstore API"
-authors = ["Daniel Santos <drsantos20@gmail.com>"]
+authors = ["Maria Eduarda <eduardamariasiqueira05@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -25,3 +25,4 @@ factory-boy = "^3.2.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
